# view

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/: split.cpp  text.cpp
include/view/: engine.h  event.h  frame_view.h  split_view.h  text_view.h  view.h
src/: engine.cpp  event.cpp  frame_view.cpp  memory_pane.cpp  memory_pane.h  ncurses_pane.cpp  ncurses_pane.h  pane.cpp  pane.h  skeleton.cpp  skeleton.h  split_view.cpp  text_view.cpp  version.h.in  view.cpp  view.h
test/: frame_view_test.cpp  skeleton_test.cpp  split_view_test.cpp  text_view_test.cpp  view_test.cpp
